--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,9 +52,12 @@ jobs:
         with:
           submodules: recursive
       
+      - name: Install curl
+        run: sudo apt-get install -y curl
+      
       - name: Install pkl
         run: |
-          curl -L -o pkl https://github.com/apple/pkl/releases/download/0.25.0/pkl-linux-amd64
+          curl -L -o pkl https://github.com/apple/pkl/releases/download/0.27.0/pkl-linux-amd64
           chmod +x pkl
           mv pkl /usr/local/bin/
           pkl --version
