--- a/.github/workflows/update-tzdb.yml
+++ b/.github/workflows/update-tzdb.yml
@@ -12,6 +12,9 @@ jobs:
   check-and-update:
     name: Check and Update TZDB
     runs-on: macos-latest
+    permissions:
+      contents: write
+      pull-requests: write
     
     steps:
       - uses: actions/checkout@v4
@@ -31,17 +34,29 @@ jobs:
       - name: Download current zonenow.tab
         run: |
           curl -o zonenow.tab.new https://raw.githubusercontent.com/eggert/tz/main/zonenow.tab
+          curl -o zone1970.tab.new https://raw.githubusercontent.com/eggert/tz/main/zone1970.tab
           
       - name: Check for changes
         id: check
         run: |
+          changes_detected=false
           if [ ! -f "zonenow.tab" ] || ! cmp -s "zonenow.tab" "zonenow.tab.new"; then
-            echo "changes_detected=true" >> $GITHUB_OUTPUT
+            echo "Changes detected in zonenow.tab"
             mv zonenow.tab.new zonenow.tab
+            changes_detected=true
           else
             echo "No changes detected in zonenow.tab"
-            echo "changes_detected=false" >> $GITHUB_OUTPUT
           fi
+          
+          if [ ! -f "zone1970.tab" ] || ! cmp -s "zone1970.tab" "zone1970.tab.new"; then
+            echo "Changes detected in zone1970.tab"
+            mv zone1970.tab.new zone1970.tab
+            changes_detected=true
+          else
+            echo "No changes detected in zone1970.tab"
+          fi
+          
+          echo "changes_detected=$changes_detected" >> $GITHUB_OUTPUT
 
       - name: Build project
         if: steps.check.outputs.changes_detected == 'true'
@@ -56,14 +71,28 @@ jobs:
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "chore: Update timezone database"
-          title: "chore: Update timezone database"
+          commit-message: "[Automated] Update Time Zone Database"
+          title: "[Automated] Update Time Zone Database"
           body: |
             This PR updates the timezone database based on changes in the IANA tzdb.
             
             Changes were automatically detected and generated using the `tzdb-gen` tool.
             
-            - Updated `zonenow.tab` from IANA
+            ### Changes
+            <details>
+            <summary>View changes</summary>
+            
+            ```diff
+            # zonenow.tab changes
+            $(diff -u zonenow.tab.new zonenow.tab || true)
+            
+            # zone1970.tab changes
+            $(diff -u zone1970.tab.new zone1970.tab || true)
+            ```
+            
+            </details>
+            
+            - Updated `zonenow.tab` and/or `zone1970.tab` from IANA
             - Regenerated PKL schema
             - Updated Swift generated code
             
@@ -73,6 +102,8 @@ jobs:
           labels: |
             automated
             tzdb-update
+            patch
+            release
           delete-branch: true
 
       - name: Check Generated Files
