--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,4 @@ DerivedData/
 .swiftpm/configuration/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .netrc
-Packages.resolved
+Packages.resolved.swiftpm/
