--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /Packages
 xcuserdata/
 DerivedData/
+.swiftpm/
 .swiftpm/configuration/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .netrc
