Rename tzdb-gen executable to SwiftTZGenerator
- Remove separate executable product name while keeping target name consistent
- Update references in GitHub workflow and documentation
- No functional changes, purely naming consistency improvement

--- a/.github/workflows/update-tzdb.yml
+++ b/.github/workflows/update-tzdb.yml
@@ -64,7 +64,7 @@ jobs:
       
       - name: Generate updated timezone data
         if: steps.check.outputs.changes_detected == 'true'
-        run: swift run tzdb-gen
+        run: swift run SwiftTZGenerator
       
       - name: Create Pull Request
         if: steps.check.outputs.changes_detected == 'true'
@@ -76,7 +76,7 @@ jobs:
           body: |
             This PR updates the timezone database based on changes in the IANA tzdb.
             
-            Changes were automatically detected and generated using the `tzdb-gen` tool.
+            Changes were automatically detected and generated using the `SwiftTZGenerator` tool.
             
             ### Changes
             <details>
